# fbpanel

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  INFO.md  INSTALL.md  README.md
.github/workflows/: build.yml  release.yml
data/config/: default.in
docs/: ARCHITECTURE.md  BUGS_AND_ISSUES.md  DEBUGGING.md  GTK_WIDGET_LIFECYCLE.md  LIBRARY_USAGE.md  MEMORY_MODEL.md  MENU_ICON.md  PLUGIN_REFERENCE.md  TODO_NEW_PLUGIN_IDEAS.md  XCONF_REFERENCE.md
panel/: bg.c  bg.h  ev.c  ev.h  ewmh.c  ewmh.h  fbwidgets.c  fbwidgets.h  gconf.c  gconf.h  gconf_panel.c  gconf_plugins.c  gtkbar.c  gtkbar.h  gtkbgbox.c  gtkbgbox.h  misc.c  misc.h  panel.c  panel.h  plugin.c  plugin.h  run.c  run.h  xconf.c  xconf.h
plugins/alsa/: alsa.c
plugins/battery/: battery.c  main.c  os_linux.c.inc  power_supply.c  power_supply.h
plugins/batterytext/: batterytext.c
plugins/brightness/: brightness.c
plugins/capslock/: capslock.c
plugins/chart/: chart.c  chart.h
plugins/clipboard/: clipboard.c
plugins/cpu/: cpu.c
plugins/cpufreq/: cpufreq.c
plugins/dclock/: dclock.c
plugins/deskno/: deskno.c
plugins/deskno2/: deskno2.c
plugins/diskio/: diskio.c
plugins/diskspace/: diskspace.c
plugins/genmon/: genmon.c
plugins/icons/: icons.c
plugins/image/: image.c
plugins/kbdlayout/: kbdlayout.c
plugins/launchbar/: launchbar.c
plugins/loadavg/: loadavg.c
plugins/mem/: mem.c  mt.h
plugins/mem2/: mem2.c
plugins/menu/: menu.c  menu.h  system_menu.c
plugins/meter/: meter.c  meter.h
plugins/net/: net.c
plugins/pager/: pager.c
plugins/separator/: separator.c
plugins/space/: space.c
plugins/swap/: swap.c
plugins/taskbar/: taskbar.c
plugins/tclock/: tclock.c
plugins/thermal/: thermal.c
plugins/timer/: timer.c
plugins/tray/: egg-marshal.c  eggmarshalers.h  eggtraymanager.c  eggtraymanager.h  fixedtip.c  fixedtip.h  main.c
plugins/user/: user.c
plugins/volume/: volume.c
plugins/wincmd/: wincmd.c
plugins/windowlist/: windowlist.c
plugins/windowtitle/: windowtitle.c
plugins/xkill/: xkill.c
plugins/xrandr/: xrandr.c
